package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

nodejs_binary(
  name = "highlight-files",
  entry_point = "ajf/tools/highlight-files/highlight-files.js",
  data = [
    "@ajfdeps//highlight.js",
    "@ajfdeps//source-map-support",
    ":sources",
  ],
)

ts_library(
  name = "sources",
  srcs = glob(["**/*.ts"]),
  deps = ["@ajfdeps//@types/node"],
  tsconfig = ":tsconfig.json",
)
