load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig-generation.json",
])

ts_library(
    name = "generate-json-schema-source",
    srcs = ["generate-json-schema.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types/node",
        "@npm//ts-json-schema-generator",
    ],
)

ts_library(
    name = "json-schema-to-ts-source",
    srcs = ["json-schema-to-ts.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "generate-json-schema",
    data = [
        ":generate-json-schema-source",
        "@npm//ts-json-schema-generator",
    ],
    entry_point = ":generate-json-schema.ts",
)

nodejs_binary(
    name = "json-schema-to-ts",
    data = [
        ":json-schema-to-ts-source",
    ],
    entry_point = ":json-schema-to-ts.ts",
)
