package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

ts_library(
  name = "transform-markdown",
  srcs = glob(["**/*.ts"]),
  deps = [
    "@ajfdeps//@types/node",
    "@ajfdeps//@types/marked",
    "//tools/highlight-files:sources",
  ],
  tsconfig = ":tsconfig.json",
)

nodejs_binary(
  name = "markdown-to-html",
  entry_point = "ajf/tools/markdown-to-html/transform-markdown.js",
  data = [
    "@ajfdeps//highlight.js",
    "@ajfdeps//marked",
    "@ajfdeps//source-map-support",
    ":transform-markdown",
  ],
)
