load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load(":third-party-bundle.bzl", "third_party_bundle")

package(default_visibility = ["//visibility:public"])

exports_files([
    "rollup.config-tmpl.js",
])

nodejs_binary(
    name = "rollup_bin",
    data = ["@npm//:node_modules"],
    entry_point = "@npm//:node_modules/rollup/dist/bin/rollup",
    # TODO(josephperrott): update dependency usages to no longer need bazel patch module resolver
    # See: https://github.com/bazelbuild/rules_nodejs/wiki#--bazel_patch_module_resolver-now-defaults-to-false-2324
    templated_args = ["--bazel_patch_module_resolver"],
)

third_party_bundle(
    name = "chart.js",
    entry_point = "@npm//:node_modules/chart.js/dist/Chart.js",
    module_name = "chart.js",
    exports = "default",
)

third_party_bundle(
    name = "css-element-queries",
    entry_point = "@npm//:node_modules/css-element-queries/index.js",
    module_name = "css-element-queries",
)

third_party_bundle(
    name = "date-fns",
    entry_point = "@npm//:node_modules/date-fns/esm/index.js",
    module_name = "date-fns",
)

third_party_bundle(
    name = "esprima",
    entry_point = "@npm//:node_modules/esprima/dist/esprima.js",
    module_name = "esprima",
    exports = "default",
)

third_party_bundle(
    name = "file-saver",
    entry_point = "@npm//:node_modules/file-saver/src/FileSaver.js",
    module_name = "file-saver",
)

third_party_bundle(
    name = "gic-core",
    entry_point = "@npm//:node_modules/@gic/core/dist/index.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@gic/core",
)

third_party_bundle(
    name = "gic-core-loader",
    entry_point = "@npm//:node_modules/@gic/core/loader/index.cjs.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@gic/core/loader",
)

third_party_bundle(
    name = "ionic-core",
    entry_point = "@npm//:node_modules/@ionic/core/dist/index.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@ionic/core",
)

third_party_bundle(
    name = "ionic-core-loader",
    entry_point = "@npm//:node_modules/@ionic/core/loader/index.cjs.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@ionic/core/loader",
)

third_party_bundle(
    name = "leaflet",
    entry_point = "@npm//:node_modules/leaflet/dist/leaflet.js",
    module_name = "leaflet",
    exports = "default",
)

third_party_bundle(
    name = "numbro",
    entry_point = "@npm//:node_modules/numbro/dist/numbro.js",
    module_name = "numbro",
)

third_party_bundle(
    name = "pdfmake",
    entry_point = "@npm//:node_modules/pdfmake/build/pdfmake.js",
    module_name = "pdfmake/build/pdfmake",
    exports = "default",
)

third_party_bundle(
    name = "quill",
    entry_point = "@npm//:node_modules/quill/dist/quill.js",
    module_name = "quill",
)

third_party_bundle(
    name = "zxing-library",
    entry_point = "@npm//:node_modules/@zxing/library/esm/index.js",
    main_fields = [
        "module",
        "main",
    ],
    module_name = "@zxing/library",
)

third_party_bundle(
    name = "xlsx",
    entry_point = "@npm//:node_modules/xlsx/xlsx.js",
    module_name = "xlsx",
)
