load(":third-party-bundle.bzl", "third_party_bundle")

package(default_visibility = ["//visibility:public"])

exports_files([
    "rollup.config-tmpl.js",
])

third_party_bundle(
    name = "chart.js",
    entry_point = "@npm//:node_modules/chart.js/dist/Chart.js",
    module_name = "chart.js",
    exports = "default",
    deps = ["@npm//chart.js"],
)

third_party_bundle(
    name = "date-fns",
    entry_point = "@npm//:node_modules/date-fns/esm/index.js",
    module_name = "date-fns",
    deps = ["@npm//date-fns"],
)

third_party_bundle(
    name = "esprima",
    entry_point = "@npm//:node_modules/esprima/dist/esprima.js",
    module_name = "esprima",
    exports = "default",
    deps = ["@npm//esprima"],
)

third_party_bundle(
    name = "gic-core",
    entry_point = "@npm//:node_modules/@gic/core/dist/index.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@gic/core",
    deps = ["@npm//@gic"],
)

third_party_bundle(
    name = "gic-core-loader",
    entry_point = "@npm//:node_modules/@gic/core/loader/index.cjs.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@gic/core/loader",
    deps = ["@npm//@gic"],
)

third_party_bundle(
    name = "ionic-core",
    entry_point = "@npm//:node_modules/@ionic/core/dist/index.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@ionic/core",
    deps = ["@npm//@ionic"],
)

third_party_bundle(
    name = "ionic-core-loader",
    entry_point = "@npm//:node_modules/@ionic/core/loader/index.cjs.js",
    globals = {
        "tslib": "tslib",
    },
    module_name = "@ionic/core/loader",
    deps = ["@npm//@ionic"],
)

third_party_bundle(
    name = "leaflet",
    entry_point = "@npm//:node_modules/leaflet/dist/leaflet.js",
    module_name = "leaflet",
    exports = "default",
)

third_party_bundle(
    name = "numbro",
    entry_point = "@npm//:node_modules/numbro/dist/numbro.js",
    module_name = "numbro",
    deps = ["@npm//numbro"],
)

third_party_bundle(
    name = "pdfmake",
    entry_point = "@npm//:node_modules/pdfmake/build/pdfmake.js",
    module_name = "pdfmake/build/pdfmake",
    exports = "default",
    deps = ["@npm//pdfmake"],
)

third_party_bundle(
    name = "quill",
    entry_point = "@npm//:node_modules/quill/dist/quill.js",
    module_name = "quill",
    deps = ["@npm//quill"],
)

third_party_bundle(
    name = "zxing-library",
    entry_point = "@npm//:node_modules/@zxing/library/esm/index.js",
    main_fields = [
        "module",
        "main",
    ],
    module_name = "@zxing/library",
    deps = ["@npm//@zxing/library"],
)

third_party_bundle(
    name = "xlsx",
    entry_point = "@npm//:node_modules/xlsx/xlsx.js",
    module_name = "xlsx",
    exports = "default",
    deps = ["@npm//xlsx"],
)
