load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "vfs-fonts-lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "*.spec.ts",
        ],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "vfs-fonts",
    data = [
        ":vfs-fonts-lib",
    ],
    entry_point = ":vfs-fonts-generator.ts",
)
