package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
)

ng_module(
    name = "ethiopian",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@ajf/calendars/ethiopian",
    deps = [
        "//src/core/calendar",
        "@npm//@angular/core",
        "@npm//date-fns",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["ethiopian.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
