load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ethiopian",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//src/core/calendar",
        "@npm//@angular/core",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["ethiopian.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
