load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "barcode",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@ajf/core/barcode",
    deps = [
        "//src/core/utils",
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@zxing/library",
    ],
)

sass_library(
    name = "barcode_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":barcode",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["barcode.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
