load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_binary",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "chart",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":chart.css"] + glob(["**/*.html"]),
    module_name = "@ajf/core/chart",
    deps = [
        "//src/core/utils",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@types/chart.js",
    ],
)

sass_library(
    name = "chart_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

sass_binary(
    name = "chart_scss",
    src = "chart.scss",
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
    ),
    deps = [
        ":chart",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["chart.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
