package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "checkbox-group",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ajf/core/checkbox-group",
  assets = [],
  deps = [
    "@angular//packages/core",
    "@angular//packages/forms",
    "//src/core/utils"
  ],
)

ng_test_library(
  name = "checkbox_group_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":checkbox-group"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [
    ":checkbox_group_test_sources",
  ],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
