package(default_visibility=["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

ng_module(
    name = "checkbox-group",
    srcs = glob(
      ["**/*.ts"],
      exclude=["**/*.spec.ts"],
    ),
    module_name = "@ajf/core/checkbox-group",
    assets = [],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "//src/core/utils"
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
    ),
    deps = [
        "@npm//@angular/platform-browser",
        ":checkbox-group"
    ]
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

markdown_to_html(
  name = "overview",
  srcs = ["checkbox-group.md"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
