load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "checkbox-group",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//src/core/utils",
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/forms",
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
    ),
    deps = [
        ":checkbox-group",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["checkbox-group.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
