load("//src/e2e-app:test_suite.bzl", "e2e_test_suite")
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_e2e_test_library",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_binary",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "file-input",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":file-input.css"] + glob(["**/*.html"]),
    module_name = "@ajf/core/file-input",
    deps = [
        "//src/core/common",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@ngx-translate/core",
    ],
)

sass_library(
    name = "file_input_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

sass_binary(
    name = "file_input_scss",
    src = "file-input.scss",
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":file-input",
        "@npm//@angular/platform-browser",
        "@npm//@ngx-translate/core",
        "@npm//rxjs",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

ng_e2e_test_library(
    name = "e2e_test_sources",
    srcs = glob(["**/*.e2e.spec.ts"]),
    deps = [
        "//src/core/testing/private/e2e",
    ],
)

e2e_test_suite(
    name = "e2e_tests",
    deps = [
        ":e2e_test_sources",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["file-input.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
