package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "form-json-validation",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ajf/core/form-json-validation",
  assets = [],
  deps = [
    "@angular//packages/core",
  ],
)

ng_test_library(
  name = "form-json-validation_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":form-json-validation"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":form-json-validation_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
