package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

ng_module(
    name = "forms",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [
        ":file-field.css",
    ] + glob(["**/*.html"]),
    module_name = "@ajf/core/forms",
    deps = [
        "//src/core/common",
        "//src/core/file-input",
        "//src/core/models",
        "//src/core/page-slider",
        "//src/core/utils",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@types/esprima",
        "@npm//date-fns",
    ],
)

sass_binary(
    name = "file_field_scss",
    src = "file-field.scss",
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":forms",
        "//src/core/models",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["forms.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
