load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_binary",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "forms",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [
        ":file-field.css",
        ":image-field.css",
        ":read-only-field.css",
        ":read-only-file-field.css",
        ":read-only-image-field.css",
        ":read-only-video-url-field.css",
        ":read-only-select-field.css",
        ":read-only-table-field.css",
    ] + glob(["**/*.html"]),
    deps = [
        "//src/core/common",
        "//src/core/file-input",
        "//src/core/models",
        "//src/core/page-slider",
        "//src/core/transloco",
        "//src/core/utils",
        "//src/core/vfs-fonts",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@types/esprima",
        "@npm//@types/pdfmake",
        "@npm//date-fns",
        "@npm//esprima",
        "@npm//pdfmake",
    ],
)

sass_library(
    name = "forms_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

sass_binary(
    name = "file_field_scss",
    src = "file-field.scss",
    deps = [],
)

sass_binary(
    name = "image_field_scss",
    src = "image-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_field_scss",
    src = "read-only-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_file_field_scss",
    src = "read-only-file-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_image_field_scss",
    src = "read-only-image-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_select_field_scss",
    src = "read-only-select-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_table_field_scss",
    src = "read-only-table-field.scss",
    deps = [],
)

sass_binary(
    name = "read_only_video_url_field_scss",
    src = "read-only-video-url-field.scss",
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":forms",
        "//src/core/models",
        "//src/core/transloco",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        ":unit_test_sources",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["forms.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
