package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
)

ng_module(
    name = "image",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@ajf/core/image",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":image",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["image.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
