package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "json-validation",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ajf/core/json-validation",
  assets = [],
  deps = [
    "@angular//packages/core",
  ],
)

ng_test_library(
  name = "json-validation_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":json-validation"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":json-validation_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
