load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_binary",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "map",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":map.css"] + glob(["**/*.html"]),
    module_name = "@ajf/core/map",
    deps = [
        "@npm//@angular/core",
        "@npm//@types/leaflet",
        "@npm//leaflet",
    ],
)

sass_library(
    name = "map_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

sass_binary(
    name = "map_scss",
    src = "map.scss",
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":map",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)

markdown_to_html(
    name = "overview",
    srcs = ["map.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
