load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
    "ng_test_library",
    "ng_web_test_suite",
    "sass_library",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "models",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//src/core/common",
        "//src/core/utils",
        "@npm//@angular/core",
        "@npm//@types/esprima",
        "@npm//date-fns",
        "@npm//numbro",
    ],
)

sass_library(
    name = "models_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [],
)

ng_test_library(
    name = "unit_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/*.e2e.spec.ts"],
    ),
    deps = [
        ":models",
        "@npm//@angular/platform-browser",
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [
        "//tools/third-party-libs:amd_date_fns",
        "//tools/third-party-libs:amd_date_fns_locales",
        "//tools/third-party-libs:amd_esprima",
        "//tools/third-party-libs:amd_numbro",
        ":unit_test_sources",
    ],
)

markdown_to_html(
    name = "overview",
    srcs = ["models.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
